compiler/weave_syntax/tests/data/syntax/namespace/ns0001.error
error: Expected '}'
        --> <source>:6:1
         |
       6 | 
         | ^
